--- a/EducationProject/EducationProject/EducationProject.csproj
+++ b/EducationProject/EducationProject/EducationProject.csproj
@@ -46,16 +46,67 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="View\Student\Inbox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View\Student\Inbox.Designer.cs">
+      <DependentUpon>Inbox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Student\MessageToMentor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\MessageToMentor.Designer.cs">
+      <DependentUpon>MessageToMentor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Student\MessageToTeacher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\MessageToTeacher.Designer.cs">
+      <DependentUpon>MessageToTeacher.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Student\EditInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\EditInfo.Designer.cs">
+      <DependentUpon>EditInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Student\Sent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\Sent.Designer.cs">
+      <DependentUpon>Sent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Student\Student.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\Student.Designer.cs">
+      <DependentUpon>Student.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="View\Student\MessageToGroupmate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Student\MessageToGroupmate.Designer.cs">
+      <DependentUpon>MessageToGroupmate.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="View\Student\Inbox.resx">
+      <DependentUpon>Inbox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Student\MessageToMentor.resx">
+      <DependentUpon>MessageToMentor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Student\EditInfo.resx">
+      <DependentUpon>EditInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Student\MessageToTeacher.resx">
+      <DependentUpon>MessageToTeacher.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Student\Sent.resx">
+      <DependentUpon>Sent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Student\Student.resx">
+      <DependentUpon>Student.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +117,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Student\MessageToGroupmate.resx">
+      <DependentUpon>MessageToGroupmate.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
