--- a/EducationProject/EducationProject.csproj
+++ b/EducationProject/EducationProject.csproj
@@ -68,6 +68,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EducationProjectDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="EducationProjectDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EducationProjectDataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Group.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -381,6 +386,17 @@
     </None>
     <None Include="EducationProjectDataSet1.xss">
       <DependentUpon>EducationProjectDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="EducationProjectDataSet2.xsc">
+      <DependentUpon>EducationProjectDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="EducationProjectDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>EducationProjectDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="EducationProjectDataSet2.xss">
+      <DependentUpon>EducationProjectDataSet2.xsd</DependentUpon>
     </None>
     <None Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
