--- a/EducationProject/EducationProject.csproj
+++ b/EducationProject/EducationProject.csproj
@@ -68,6 +68,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EducationProjectDataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="EducationProjectDataSet3.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EducationProjectDataSet3.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Group.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -78,6 +83,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Library.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Mentor.cs">
@@ -116,7 +124,7 @@
     <Compile Include="Teacher.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Transcript.cs">
+    <Compile Include="UserType.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="View\Extensions.cs" />
@@ -126,11 +134,11 @@
     <Compile Include="View\Mentor\MentorInbox.Designer.cs">
       <DependentUpon>MentorInbox.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Mentor\Mentor.cs">
+    <Compile Include="View\Mentor\MentorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Mentor\Mentor.Designer.cs">
-      <DependentUpon>Mentor.cs</DependentUpon>
+    <Compile Include="View\Mentor\MentorForm.Designer.cs">
+      <DependentUpon>MentorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Mentor\MentorEditInfo.cs">
       <SubType>Form</SubType>
@@ -212,6 +220,12 @@
     <Compile Include="View\Teacher\TeacherAddToLibrary.Designer.cs">
       <DependentUpon>TeacherAddToLibrary.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Teacher\TeacherTranscript.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Teacher\TeacherTranscript.Designer.cs">
+      <DependentUpon>TeacherTranscript.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Teacher\TeacherAssignTask.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -266,11 +280,11 @@
     <Compile Include="View\Teacher\TeacherUpdateTask.Designer.cs">
       <DependentUpon>TeacherUpdateTask.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Teacher\Teacher.cs">
+    <Compile Include="View\Teacher\TeacherForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Teacher\Teacher.Designer.cs">
-      <DependentUpon>Teacher.cs</DependentUpon>
+    <Compile Include="View\Teacher\TeacherForm.Designer.cs">
+      <DependentUpon>TeacherForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Teacher\TeacherAddTask.cs">
       <SubType>Form</SubType>
@@ -284,11 +298,17 @@
     <Compile Include="View\Teacher\TeacherEditInfo.Designer.cs">
       <DependentUpon>TeacherEditInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\WelcomeScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\WelcomeScreen.Designer.cs">
+      <DependentUpon>WelcomeScreen.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\Mentor\MentorInbox.resx">
       <DependentUpon>MentorInbox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Mentor\Mentor.resx">
-      <DependentUpon>Mentor.cs</DependentUpon>
+    <EmbeddedResource Include="View\Mentor\MentorForm.resx">
+      <DependentUpon>MentorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Mentor\MentorEditInfo.resx">
       <DependentUpon>MentorEditInfo.cs</DependentUpon>
@@ -338,6 +358,9 @@
     <EmbeddedResource Include="View\Teacher\TeacherAddToLibrary.resx">
       <DependentUpon>TeacherAddToLibrary.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Teacher\TeacherTranscript.resx">
+      <DependentUpon>TeacherTranscript.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Teacher\TeacherAssignTask.resx">
       <DependentUpon>TeacherAssignTask.cs</DependentUpon>
     </EmbeddedResource>
@@ -365,14 +388,17 @@
     <EmbeddedResource Include="View\Teacher\TeacherUpdateTask.resx">
       <DependentUpon>TeacherUpdateTask.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Teacher\Teacher.resx">
-      <DependentUpon>Teacher.cs</DependentUpon>
+    <EmbeddedResource Include="View\Teacher\TeacherForm.resx">
+      <DependentUpon>TeacherForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Teacher\TeacherAddTask.resx">
       <DependentUpon>TeacherAddTask.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Teacher\TeacherEditInfo.resx">
       <DependentUpon>TeacherEditInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\WelcomeScreen.resx">
+      <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -399,6 +425,17 @@
     </None>
     <None Include="EducationProjectDataSet2.xss">
       <DependentUpon>EducationProjectDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="EducationProjectDataSet3.xsc">
+      <DependentUpon>EducationProjectDataSet3.xsd</DependentUpon>
+    </None>
+    <None Include="EducationProjectDataSet3.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>EducationProjectDataSet3.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="EducationProjectDataSet3.xss">
+      <DependentUpon>EducationProjectDataSet3.xsd</DependentUpon>
     </None>
     <None Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
