--- a/EducationProject/EducationProject.csproj
+++ b/EducationProject/EducationProject.csproj
@@ -91,6 +91,9 @@
     <Compile Include="Mentor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Message.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
