--- a/EducationProject/EducationProject.csproj
+++ b/EducationProject/EducationProject.csproj
@@ -149,6 +149,12 @@
     <Compile Include="View\Mentor\MentorEditInfo.Designer.cs">
       <DependentUpon>MentorEditInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Mentor\MentorInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Mentor\MentorInfo.Designer.cs">
+      <DependentUpon>MentorInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Mentor\MentorMessageToMentor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -322,6 +328,9 @@
     <EmbeddedResource Include="View\Mentor\MentorEditInfo.resx">
       <DependentUpon>MentorEditInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Mentor\MentorInfo.resx">
+      <DependentUpon>MentorInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Mentor\MentorMessageToMentor.resx">
       <DependentUpon>MentorMessageToMentor.cs</DependentUpon>
     </EmbeddedResource>
@@ -481,8 +490,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Microsoft\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
